# PyQual

./: .gitignore  LICENCE.txt  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yaml
src/: client.py  constants.py  settings.py
src/pyqual/: __init__.py  client.py  constants.py  exceptions.py  managers.py  models.py  utils.py
src/tests/: test_client.py  test_managers.py
tests/: test_client.py  test_managers.py  test_models.py
