[project]
name = "pyqual"
version = "0.0.1"
authors = [
  { name="Sebastian Fest", email="sebsatian.fest@gmail.com" },
]
description = "A cient for qualtrics"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/sebfest/pyqual"
Issues = "https://github.com/sebfest/pyqual/issues"