[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyqual"
version = "0.0.1"
authors = [
    { name = "Sebastian Fest", email = "sebastian.fest@gmail.com" },
]
description = "A simple client for Qualtrics."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["Qualtrics", "Client"]
license = "MIT"
license-files = ["LICENCE.txt"]
classifiers = [
    'Development Status :: 1 - Planning',
    'Intended Audience :: Science/Research',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python :: 3.11',
]
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "coverage"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["pyqual*"]
